Yet there is no docs/

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,6 +45,7 @@ jobs:
           fail_ci_if_error: false
 
   docs:
+    if: ${{ hashFiles('docs/**') != '' }}
     name: Documentation
     runs-on: ubuntu-latest
     permissions:
